--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -59,6 +59,7 @@ flutter {
 
 dependencies {
     testImplementation 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
